Series Detail Reviews Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="story_line">Story Line</string>
+    <string name="cast">Cast</string>
+    <string name="user_reviews">User Reviews</string>
 </resources>
