UI Restored and returned Only Retrofit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="story_line">Story Line</string>
     <string name="cast">Cast</string>
     <string name="user_reviews">User Reviews</string>
+    <string name="web_sitesi">Web Sitesi</string>
+    <string name="listeye_ekle">Listeye Ekle</string>
+    <string name="tur">Tür</string>
+    <string name="dizi_erik">Dizi İçerik</string>
 </resources>
