Bottom Sheet Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="tur">Tür</string>
     <string name="dizi_erik">Dizi İçerik</string>
     <string name="download_poster">Download Poster</string>
+    <string name="sw_pe_for_deta_l">SWİPE FOR DETAİL</string>
 </resources>
